fix overlapping review text area

--- a/frontend/src/components/ReviewsComponent/reviewComponentStyle.css
+++ b/frontend/src/components/ReviewsComponent/reviewComponentStyle.css
@@ -30,7 +30,7 @@
 }
 
 #reviewTextArea {
-  width: 40vw;
+  width: 100%;
   resize: none;
   padding: 10px;
   box-sizing: border-box;
